--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,7 +1,7 @@
 <hgroup>
   <h1>
   	<a href="{{ root_url }}/">
-  		<img src="images/logo.png">
+  		<img src="{{ root_url }}/images/logo.png">
   	</a>
   </h1>
   {% if site.subtitle %}
